tests/NormalTests/paczka1/fuzzy1/25394750.err
Error in line 2: seUhFA S57 85,5
Error in line 6: S465 S465 95,7
Error in line 1: 2kwSVn6 A448 85,5
Error in line 18: 0ppURhB S57 44,5
Error in line 21: kwvoec S57 99,5
Error in line 16: 0ppURahB S976 14,4
Error in line 30: 2kwSVn6 S57 23,4
